tests/paczka2/big_fuzzy/34557426.err
Error in line 1: HMaEFf´Xa3 S195 8,0
Error in line 11: NcWfzV A953 04,3
Error in line 4: NcWfzV S462 99,1
Error in line 14: NcWfzV S195 73,4
Error in line 7: HMaEFfuXa3 S195 15,7
Error in line 28: S462 A953 11,5
Error in line 39: 6GpPEOpYFT0 S195 207,5
Error in line 43: 6GpPEOpYFT0 A953 1,0
Error in line 62: LekWeoL S195 238,0
Error in line 74: 99E S935 27,3
Error in line 93: LekWeoL A953 99,17
Error in line 92: HMaEFfuXa3 S195 27,6
Error in line 89: LekWeoL S935 82,8
Error in line 99: LekWeoL A953 79,8
Error in line 97: HMaEFfuXa3 A953 53,8
Error in line 106: NcWfzV S462 22,7
Error in line 113: NcWfzV A953 -1,8
Error in line 105: cknBnbhIZ7x A953 93,9
Error in line 117: cknBnbhIZ7x S935 7,8
Error in line 128: S462 A953 86-4
Error in line 125: NcWfzV S935 47,0
Error in line 119: LekWeoL S935 95,2
Error in line 134: 99E S462 47,9
Error in line 139: S462 A953 298,9
Error in line 131: LekWeoL A953 51,2
Error in line 144: 99E S462 88,6
Error in line 132: HMaEFfuXa3 S195 423,6
Error in line 154: HMaEFfuXa3 S195 23,0
Error in line 171: 6GpPEOpYFT0 S462 167,6
Error in line 109: cknBnbhI7x A953 174,7
Error in line 174: 6GpPEOpYFT0 A953 44,1
Error in line 184: HMaEFfuXa3 S195 361,9
Error in line 179: cknBnbhIZ7x S195 368,8
Error in line 189: NcWfzV S195 27,6
Error in line 192: LekWeoL A953 70,3
Error in line 203: S462 S935 99,5
Error in line 202: LekWeoL S195 41,8
Error in line 195: 6GpPEOpYFT0 S462 94,4
Error in line 214: S462 S462 52,9
Error in line 217: 6GpPEOpYFT0 S195 43,7
Error in line 225: 6GpPEOpYFT0 A953 43,2
Error in line 218: cknBnbhIZ7x S935 159,2
Error in line 229: cknBnbhIZ7x S195 52,7
Error in line 232: NcWfzV S935 93,1
